dataset1235/2025-2/805158916/users/1084532176/executions/2118643220_1245234979.log
== SUBMISSION (2025-09-01 14:17:06)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso/quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria67.45
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria497.35
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria71.91
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria465.26
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria91.41
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria248.72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:09:42)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=peso-quantidade
print (round(restante,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria252.3
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1980.22
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria227.36
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1112.91
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria501.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria980.22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:16:42)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso*quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria27522.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria201133.51
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria20757.53
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria68006.25
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria76879.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria100583.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:22:55)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso-quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1261.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria9901.12
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1136.8
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria5564.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria2506.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria4901.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:25:12)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso-quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1261.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria9901.12
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1136.8
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria5564.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria2506.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria4901.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:15:45)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso/quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria67.45
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria497.35
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria71.91
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria465.26
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria91.41
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria248.72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:28:21)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria de racao"))
restante=(peso-5*quantidade)*5

print (round(restante,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao857.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao9498.92
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao797.0
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao5322.75
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1926.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao4498.92
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:16:41)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso*quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria27522.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria201133.51
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria20757.53
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria68006.25
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria76879.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria100583.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:17:05)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso/quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria67.45
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria497.35
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria71.91
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria465.26
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria91.41
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria248.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:28:26)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria de racao"))
restante=(peso-5*quantidade)

print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao171.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1899.78
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao159.4
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1064.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao385.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao899.78
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:27:03)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria de racao"))
restante=(peso-quantidade)
print (restante)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao252.3
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1980.2233
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao227.35999999999999
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1112.91
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao501.20000000000005
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao980.2233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:27:38)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria de racao"))
restante=(peso-5*quantidade)
print (restante)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao171.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1899.7833
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao159.4
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1064.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao385.20000000000005
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao899.7833
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:27:02)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria de racao"))
restante=(peso-quantidade)
print (restante)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao252.3
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1980.2233
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao227.35999999999999
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1112.91
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao501.20000000000005
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao980.2233
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:22:50)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(pes-quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante=(pes-quantidade)*5
              ^^^
NameError: name 'pes' is not defined. Did you mean: 'peso'?
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante=(pes-quantidade)*5
              ^^^
NameError: name 'pes' is not defined. Did you mean: 'peso'?
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante=(pes-quantidade)*5
              ^^^
NameError: name 'pes' is not defined. Did you mean: 'peso'?
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante=(pes-quantidade)*5
              ^^^
NameError: name 'pes' is not defined. Did you mean: 'peso'?
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante=(pes-quantidade)*5
              ^^^
NameError: name 'pes' is not defined. Did you mean: 'peso'?
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    restante=(pes-quantidade)*5
              ^^^
NameError: name 'pes' is not defined. Did you mean: 'peso'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:15:47)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso/quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria67.45
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria497.35
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria71.91
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria465.26
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria91.41
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria248.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:24:59)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso/quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria67.45
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria497.35
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria71.91
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria465.26
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria91.41
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria248.72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:27:14)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria de racao"))
restante=(peso-quantidade)
print (restante)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao252.3
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1980.2233
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao227.35999999999999
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1112.91
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao501.20000000000005
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao980.2233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:28:22)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria de racao"))
restante=(peso-5*quantidade)*5

print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao857.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao9498.92
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao797.0
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao5322.75
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1926.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao4498.92
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:16:08)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso/quantidade)
print (round(restante,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria13.49
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria99.47
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria14.38
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria93.05
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria18.28
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria49.74
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:14:46)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=peso-quantidade
print (round(restante,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria252.3
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1980.22
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria227.36
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1112.91
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria501.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria980.22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:16:30)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso-quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1261.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria9901.12
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1136.8
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria5564.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria2506.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria4901.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:24:58)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso/quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria67.45
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria497.35
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria71.91
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria465.26
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria91.41
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria248.72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:28:20)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria de racao"))
restante=(peso-5*quantidade)*5

print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao857.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao9498.92
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao797.0
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao5322.75
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1926.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao4498.92
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:23:53)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso-quantidade)
print (round(restante,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria252.3
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1980.22
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria227.36
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1112.91
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria501.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria980.22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:23:53)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso-quantidade)
print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria252.3
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1980.22
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria227.36
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1112.91
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria501.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria980.22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:27:51)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria de racao"))
restante=(peso-quantidade)*5

print (restante)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1261.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao9901.1165
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1136.8
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao5564.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao2506.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao4901.1165
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:22:56)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso-quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1261.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria9901.12
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1136.8
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria5564.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria2506.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria4901.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:16:31)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso-quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1261.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria9901.12
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1136.8
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria5564.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria2506.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria4901.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:28:21)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria de racao"))
restante=(peso-5*quantidade)*5

print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao857.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao9498.92
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao797.0
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao5322.75
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao1926.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria de racao4498.92
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:23:04)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso-quantidade)*5
print (round(restante,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1261.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria9901.12
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria1136.8
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria5564.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria2506.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria4901.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:23:26)
-- CODE: 
peso=float(input("escreva o valor do peso do saco de ração"))
quantidade=float(input("escreva a quantidade diaria"))
restante=(peso-quantidade)/5
print (round(restante,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria50.46
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria396.04
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria45.47
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria222.58
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria100.24
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
escreva o valor do peso do saco de raçãoescreva a quantidade diaria196.04
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
